[gd_scene load_steps=9 format=3 uid="uid://dbetcucbuq726"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_n73ct"]
[ext_resource type="Script" path="res://scenes/player/dino/Dino.gd" id="2_55r2h"]
[ext_resource type="Texture2D" uid="uid://b7kpx0epo0m7u" path="res://Assets/dino.png" id="3_uqmll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g28ss"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sfa70"]
radius = 94.0213

[sub_resource type="Animation" id="Animation_30qrf"]
resource_name = "idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_72td6"]
resource_name = "walk"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlbt8"]
_data = {
"idle": SubResource("Animation_30qrf"),
"walk": SubResource("Animation_72td6")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_n73ct")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(36, 0)
rotation = -1.57079
position_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g28ss")

[node name="ActionZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionZone"]
position = Vector2(36, 0)
rotation = -1.57079
shape = SubResource("CircleShape2D_sfa70")
debug_color = Color(0, 0.623529, 0.529412, 0.419608)

[node name="Dino" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_55r2h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dino"]
libraries = {
"": SubResource("AnimationLibrary_dlbt8")
}

[node name="Shadow" type="Sprite2D" parent="Dino"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Dino"]
texture_filter = 1
position = Vector2(0, -48)
scale = Vector2(4, 4)
texture = ExtResource("3_uqmll")
hframes = 14
frame = 5

[connection signal="body_entered" from="ActionZone" to="." method="_on_action_zone_body_entered"]
[connection signal="body_exited" from="ActionZone" to="." method="_on_action_zone_body_exited"]
